Lavet ActivityGame og ændring i Crypt javafil

--- a/Android/Ghosts-N-Whatever/app/src/main/res/values/strings.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="title_activity_lobby">LobbyActivity</string>
 
-    <string name="ghost_description">As a Ghost, your main objective is to... "Borrow" Souls from the local village, and return these souls to your family Crypt.
+    <string name="ghost_description">As a Ghost, your main objective is to... \"Borrow\" Souls from the local village, and return these souls to your family Crypt.
         For Each soul delivered we will reward you with one afterlife token to be use in our afterlife-gift-shop. However, be aware! There are others out there trying to get to you.
         If a Ghost Hunter traps you while you are entering your Crypt, or if he surprises you while delivering a soul, he will capture your essence.
         Graverobbers may also come to your family crypt and steal from you your mortal remains.
@@ -15,7 +15,7 @@
         You now know what you need in order to succeed in the afterlife, so go out there, earn tokens and grab yourself a T-shirt, or maby even a hat!
     </string>
     <string name="graverobber_description">Greetings fellow Renovation Employee! Others may call us Graverobbers, but thats just because they do not understand the true values of recycling.
-        Our job is to visit crypts of the departed an "relieve" them of their worldy possesions, seeing as they do not need them anymore.
+        Our job is to visit crypts of the departed an \"relieve\" them of their worldy possesions, seeing as they do not need them anymore.
         We have contacts in the local village, who are willing to purchace these items from you, and this is how we make a proffit.
         Take care when visiting a crypt, however. If a Ghost or Ghost Hunter is residing in the crypt when you enter, or if you are supprised by a Ghost or Ghost Hunter, you will be frozen in fear, or arrested, taking you out of the game for some time.
         The Ghost Hunters leave traps to capture the ghosts. These are easy to spot for us Graverobb.. i mean Renovation Emploees, and if they are delivered to the village, they can bring in some good bucks!
